--- a/README
+++ b/README
@@ -1,7 +1,10 @@
 WiFire v0.1
-=======
-Special thanks to red-dragon, vi013t, and qu33n
-=======
+==============
+Thanks to:
+  red-dragon,
+  vi013t,
+  qu33n
+==============
 
 ==============
 What is WiFire
@@ -9,11 +12,13 @@ What is WiFire
 Adalah sebuah bash script yang dibuat oleh blusp10it guna mempermudah
 pentester dalam melakukan cracking password WiFi. Adapun WiFire dapat
 melakukan:
-  1. Scanning WiFi
-  2. Cracking WEP
-  3. Cracking WPA
+  1. Scanning AP dan mendeteksi teknologi enkripsinya
+  2. Mencari client dan menyesuaikan wordlist
+  3. Cracking WEP
+  4. Cracking WPA
 
 Project selanjutnya adalah menambahkan mode DoS dan Injection untuk
-melakukan penyerangan
+melakukan penyerangan. Perhatikan, script ini akan sangat optimal jika
+dijalankan di OS Back|Track
 
 (C)opyright blusp10it
