--- a/README
+++ b/README
@@ -12,7 +12,7 @@ melakukan:
 
 Project selanjutnya adalah menambahkan mode DoS dan Injection untuk
 melakukan penyerangan. Perhatikan, script ini akan sangat optimal jika
-dijalankan di OS Back|Track 5.
+dijalankan di OS Back|Track.
 
 Fixed issue:
   1. Error ketika mengecek dependency => Beta 0
